# monimata

./: .gitignore  .npmrc  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODOS.txt  nx.json  package-lock.json  package.json  tsconfig.json
apps/api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  celerybeat-schedule  pyproject.toml  requirements.txt  start.sh
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_add_updated_at_to_categories.py  0003_targets_and_recurring.py  0004_transaction_datetime.py  0005_starting_balance.py  0006_nudge_context_fcm_token.py  0007_rename_fcm_token_to_expo_push_token.py  0008_manual_accounts.py  0009_add_alias_to_bank_accounts.py  0010_pending_bill_payments.py  0011_remove_mono_interswitch.py  0011_remove_mono_interswitch_columns.py  0012_username_and_drop_bank_code.py  0013_external_ref_on_transactions.py  0014_statement_transaction_source.py  0015_encrypt_account_numbers.py  0016_bank_slug_on_bank_accounts.py  0017_user_streak.py  0018_categorisation_schema.py  (+7 more)
apps/api/app/: main.py  ws_manager.py
apps/api/tests/: conftest.py  test_accounts.py  test_admin_nudge_rules.py  test_ai.py  test_auth.py  test_budget.py  test_budget_logic.py  test_budget_statement_e2e.py  test_categories.py  test_content.py  test_dsl_engine.py  test_health.py  test_middleware.py  test_nudge_metrics.py  test_nudge_rule_schema.py  test_nudges.py  test_recurring.py  test_reports.py  test_schemas.py  test_security.py  test_sync.py  test_transactions.py  test_uploads.py  test_webhooks.py
(+329 files in other folders)
