[tool.poetry]
name = "monimata-api"
version = "0.1.0"
description = "MoniMata backend — zero-based budgeting for Nigerians"
authors = []
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
pydantic = {extras = ["email"], version = "^2.6.0"}
pydantic-settings = "^2.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
cryptography = "^42.0.0"
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
thefuzz = {extras = ["speedup"], version = "^0.22.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.3.0"
mypy = "^1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
